# logi-man

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml
src/: main.rs  models.rs  options.rs
