[package]
name = "logi-man"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.34.0", features = ["bundled"] }
clap = { version = "4.5.35", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
edit = "0.1.5"
libc = "0.2.171"
directories-next = "2.0.0"